// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit tests for the product detail page. Should render detail of a product. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-blue-chalk text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3 shrink-0"
      >
        <div
          class="bg-dial-slate-100 lg:h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-meadow font-semibold"
              >
                @firma
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="inline"
                >
                  <img
                    alt="Logo of Product."
                    class="object-contain"
                    src="http://localhost:3000//assets/products/firma.png"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              >
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-meadow"
                  >
                    Website
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    <a
                      class="flex border-b border-dial-iris-blue "
                      href="//administracionelectronica.gob.es/ctt/clienteafirma"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <div
                        class="line-clamp-1 break-all"
                      >
                        administracionelectronica.gob.es/ctt/clienteafirma
                      </div>
                    </a>
                     ⧉
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-meadow"
                  >
                    License
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    NONE
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="flex flex-row gap-3"
                  >
                    <div
                      class="font-semibold text-dial-meadow"
                    >
                      Sectors
                    </div>
                    <div
                      class="flex gap-3 ml-auto"
                    />
                  </div>
                  <div
                    class="flex flex-col gap-y-2"
                  >
                    <div>
                      <div>
                        State and Democracy (Good Governance)
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <form>
          <div
            class="px-4 lg:px-0 py-4 lg:py-6 text-dial-meadow"
          >
            <div
              class="flex flex-col gap-y-6 text-sm"
            >
              <div
                class="text-xl font-semibold"
              >
                Edit @firma
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                  for="name"
                >
                  Name
                </label>
                <input
                  class="w-full text-sm"
                  id="name"
                  name="name"
                  placeholder="Name"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label>
                  Aliases
                </label>
                <div
                  class="flex gap-x-2"
                >
                  <input
                    class="w-full text-sm"
                    name="aliases.0.value"
                    placeholder="Alias"
                    type="text"
                    value=""
                  />
                  <button
                    class="bg-dial-meadow shadow-md px-3 py-2.5 hover:bg-dial-angel"
                    type="button"
                  >
                    <svg
                      class="text-sm"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 448 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="website"
                >
                  Website
                </label>
                <div
                  class="border border-transparent url-input bg-white flex items-center"
                >
                  <span
                    class="select-none text-dial-gray"
                  >
                    https://
                  </span>
                  <input
                    class="url w-full text-sm placeholder-dial-gray border-0 py-0 px-0 focus:outline-0"
                    id="website"
                    placeholder="Website"
                    value="administracionelectronica.gob.es/ctt/clienteafirma"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label>
                  Logo
                </label>
                <label
                  class="flex items-center"
                >
                  <input
                    accept=".jpg,.jpeg,.png,.bmp"
                    class="bg-white file:hidden w-full text-sm"
                    name="imageFile"
                    type="file"
                  />
                  <div
                    class="-ml-11 flex p-1"
                  >
                    <span
                      class="h-full pl-1 border-l text-dial-gray-dark border-dial-gray-dark"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        version="1.1"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 14h-10v-2l3-5 4.109 5 2.891-2v4z"
                        />
                        <path
                          d="M13 7.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5 0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5z"
                        />
                        <path
                          d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
                <div
                  class="text-xs italic text-dial-stratos"
                >
                  Note: Supported file types are jpg, png, and bmp
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                >
                  Description
                </label>
                <div
                  class="editor-shell read-write"
                >
                  <div
                    class="flex flex-col"
                  >
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Undo"
                        class="toolbar-item spaced"
                        disabled=""
                        title="Undo (Ctrl+Z)"
                        type="button"
                      >
                        <i
                          class="format undo"
                        />
                      </button>
                      <button
                        aria-label="Redo"
                        class="toolbar-item"
                        disabled=""
                        title="Redo (Ctrl+Y)"
                        type="button"
                      >
                        <i
                          class="format redo"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text style"
                        class="toolbar-item block-controls"
                        type="button"
                      >
                        <span
                          class="icon block-type paragraph"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Normal
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for font family"
                        class="toolbar-item font-family"
                        type="button"
                      >
                        <span
                          class="icon block-type font-family"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Arial
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Decrease font size"
                        class="toolbar-item font-decrement"
                        title="Decrease font size (Ctrl+Shift+,)"
                        type="button"
                      >
                        <i
                          class="format minus-icon"
                        />
                      </button>
                      <input
                        class="toolbar-item font-size-input"
                        max="72"
                        min="8"
                        title="Font size"
                        type="number"
                        value="15"
                      />
                      <button
                        aria-label="Increase font size"
                        class="toolbar-item font-increment"
                        title="Increase font size (Ctrl+Shift+.)"
                        type="button"
                      >
                        <i
                          class="format add-icon"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Format text as bold. Shortcut: Ctrl+B"
                        class="toolbar-item spaced "
                        title="Bold (Ctrl+B)"
                        type="button"
                      >
                        <i
                          class="format bold"
                        />
                      </button>
                      <button
                        aria-label="Format text as italics. Shortcut: Ctrl+I"
                        class="toolbar-item spaced "
                        title="Italic (Ctrl+I)"
                        type="button"
                      >
                        <i
                          class="format italic"
                        />
                      </button>
                      <button
                        aria-label="Format text to underlined. Shortcut: Ctrl+U"
                        class="toolbar-item spaced "
                        title="Underline (Ctrl+U)"
                        type="button"
                      >
                        <i
                          class="format underline"
                        />
                      </button>
                      <button
                        aria-label="Insert code block"
                        class="toolbar-item spaced "
                        title="Insert code block (Ctrl+Shift+C)"
                        type="button"
                      >
                        <i
                          class="format code"
                        />
                      </button>
                      <button
                        aria-label="Insert link"
                        class="toolbar-item spaced "
                        title="Insert link (Ctrl+K)"
                        type="button"
                      >
                        <i
                          class="format link"
                        />
                      </button>
                    </div>
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Formatting text color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon font-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting background color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon bg-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting options for additional text styles"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon dropdown-more"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Insert specialized editor node"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon plus"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Insert
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text alignment"
                        class="toolbar-item spaced alignment"
                        type="button"
                      >
                        <span
                          class="icon left-align"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Left Align
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="editor-container "
                  >
                    <div
                      class="editor-scroller"
                    >
                      <div
                        class="editor"
                      >
                        <div
                          aria-placeholder="Description"
                          class="ContentEditable__root read-write"
                          contenteditable="true"
                          data-lexical-editor="true"
                          role="textbox"
                          spellcheck="true"
                          style="user-select: text; white-space: pre-wrap; word-break: break-word;"
                        >
                          <p
                            class="ExchangeLexicalTheme__paragraph ExchangeLexicalTheme__ltr"
                            dir="ltr"
                          >
                            <span
                              data-lexical-text="true"
                            >
                              Suite of solutions for digital identities and electronic signatures, aimed at public administrations for the implementation of authentication and electronic signatures in a streamlined and effective manner.
                            </span>
                          </p>
                        </div>
                        <div
                          draggable="true"
                        >
                          <div
                            class="icon draggable-block-menu"
                            style="opacity: 0; transform: translate(-10000px, -10000px);"
                          >
                            <div
                              class="icon"
                            />
                          </div>
                        </div>
                        <div
                          class="draggable-block-target-line"
                        />
                        <div
                          class="link-editor"
                          style="opacity: 1; transform: translate(-5px, 10px);"
                        />
                        <div
                          class="table-cell-action-button-container"
                        />
                      </div>
                    </div>
                    <div />
                    <div
                      class="actions"
                    >
                      <button
                        aria-label="Disable speech to text"
                        class="action-button action-button-mic"
                        title="Speech To Text"
                        type="button"
                      >
                        <i
                          class="mic"
                        />
                      </button>
                      <button
                        aria-label="Clear editor contents"
                        class="action-button clear"
                        title="Clear"
                        type="button"
                      >
                        <i
                          class="clear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="border-b border-dashed border-dial-slate-300"
              />
              <div
                class="text-2xl font-semibold pb-4"
              >
                Product Pricing Information
              </div>
              <label
                class="flex gap-x-2 mb-2 items-center self-start"
              >
                <input
                  class="h-5 w-5"
                  name="commercialProduct"
                  type="checkbox"
                />
                This product is commercial product.
              </label>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="pricingUrl"
                >
                  Link to Pricing Information
                </label>
                <div
                  class="border border-transparent url-input bg-white flex items-center"
                >
                  <input
                    class="url w-full text-sm placeholder-dial-gray border-0 py-0 px-0 focus:outline-0"
                    id="pricingUrl"
                    placeholder="Link to Pricing Information"
                    value=""
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="hostingModel"
                >
                  Hosting Model
                </label>
                <input
                  class="w-full text-sm"
                  id="hostingModel"
                  name="hostingModel"
                  placeholder="Hosting Model"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="pricingModel"
                >
                  Pricing Model
                </label>
                <input
                  class="w-full text-sm"
                  id="pricingModel"
                  name="pricingModel"
                  placeholder="Pricing Model"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label>
                  Pricing Details
                </label>
                <div
                  class="editor-shell read-write"
                >
                  <div
                    class="flex flex-col"
                  >
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Undo"
                        class="toolbar-item spaced"
                        disabled=""
                        title="Undo (Ctrl+Z)"
                        type="button"
                      >
                        <i
                          class="format undo"
                        />
                      </button>
                      <button
                        aria-label="Redo"
                        class="toolbar-item"
                        disabled=""
                        title="Redo (Ctrl+Y)"
                        type="button"
                      >
                        <i
                          class="format redo"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text style"
                        class="toolbar-item block-controls"
                        type="button"
                      >
                        <span
                          class="icon block-type paragraph"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Normal
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for font family"
                        class="toolbar-item font-family"
                        type="button"
                      >
                        <span
                          class="icon block-type font-family"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Arial
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Decrease font size"
                        class="toolbar-item font-decrement"
                        title="Decrease font size (Ctrl+Shift+,)"
                        type="button"
                      >
                        <i
                          class="format minus-icon"
                        />
                      </button>
                      <input
                        class="toolbar-item font-size-input"
                        max="72"
                        min="8"
                        title="Font size"
                        type="number"
                        value="15"
                      />
                      <button
                        aria-label="Increase font size"
                        class="toolbar-item font-increment"
                        title="Increase font size (Ctrl+Shift+.)"
                        type="button"
                      >
                        <i
                          class="format add-icon"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Format text as bold. Shortcut: Ctrl+B"
                        class="toolbar-item spaced "
                        title="Bold (Ctrl+B)"
                        type="button"
                      >
                        <i
                          class="format bold"
                        />
                      </button>
                      <button
                        aria-label="Format text as italics. Shortcut: Ctrl+I"
                        class="toolbar-item spaced "
                        title="Italic (Ctrl+I)"
                        type="button"
                      >
                        <i
                          class="format italic"
                        />
                      </button>
                      <button
                        aria-label="Format text to underlined. Shortcut: Ctrl+U"
                        class="toolbar-item spaced "
                        title="Underline (Ctrl+U)"
                        type="button"
                      >
                        <i
                          class="format underline"
                        />
                      </button>
                      <button
                        aria-label="Insert code block"
                        class="toolbar-item spaced "
                        title="Insert code block (Ctrl+Shift+C)"
                        type="button"
                      >
                        <i
                          class="format code"
                        />
                      </button>
                      <button
                        aria-label="Insert link"
                        class="toolbar-item spaced "
                        title="Insert link (Ctrl+K)"
                        type="button"
                      >
                        <i
                          class="format link"
                        />
                      </button>
                    </div>
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Formatting text color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon font-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting background color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon bg-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting options for additional text styles"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon dropdown-more"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Insert specialized editor node"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon plus"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Insert
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text alignment"
                        class="toolbar-item spaced alignment"
                        type="button"
                      >
                        <span
                          class="icon left-align"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Left Align
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="editor-container "
                  >
                    <div
                      class="editor-scroller"
                    >
                      <div
                        class="editor"
                      >
                        <div
                          aria-placeholder="Pricing Details"
                          class="ContentEditable__root read-write"
                          contenteditable="true"
                          data-lexical-editor="true"
                          role="textbox"
                          spellcheck="true"
                          style="user-select: text; white-space: pre-wrap; word-break: break-word;"
                        >
                          <p
                            class="ExchangeLexicalTheme__paragraph"
                          >
                            <br />
                          </p>
                        </div>
                        <div
                          aria-hidden="true"
                        >
                          <div
                            class="ContentEditable__placeholder"
                          >
                            Pricing Details
                          </div>
                        </div>
                        <div
                          draggable="true"
                        >
                          <div
                            class="icon draggable-block-menu"
                            style="opacity: 0; transform: translate(-10000px, -10000px);"
                          >
                            <div
                              class="icon"
                            />
                          </div>
                        </div>
                        <div
                          class="draggable-block-target-line"
                        />
                        <div
                          class="link-editor"
                          style="opacity: 1; transform: translate(-5px, 10px);"
                        />
                        <div
                          class="table-cell-action-button-container"
                        />
                      </div>
                    </div>
                    <div />
                    <div
                      class="actions"
                    >
                      <button
                        aria-label="Disable speech to text"
                        class="action-button action-button-mic"
                        title="Speech To Text"
                        type="button"
                      >
                        <i
                          class="mic"
                        />
                      </button>
                      <button
                        aria-label="Clear editor contents"
                        class="action-button clear"
                        disabled=""
                        title="Clear"
                        type="button"
                      >
                        <i
                          class="clear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-wrap text-base mt-6 gap-3"
              >
                <button
                  class="submit-button"
                  type="submit"
                >
                  Submit Product
                </button>
                <button
                  class="cancel-button"
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the product detail page. Should render edit page for logged in user. 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="lg:px-8 xl:px-56 flex flex-col"
  >
    <div
      class="px-4 lg:px-6 py-4 bg-dial-blue-chalk text-dial-stratos ribbon-detail z-40"
    >
      <div
        class="whitespace-nowrap text-ellipsis overflow-hidden"
      >
        <a
          class="h5"
          href="/"
        >
          Home
        </a>
      </div>
    </div>
    <div
      class="flex flex-col lg:flex-row gap-x-8"
    >
      <div
        class="lg:basis-1/3 shrink-0"
      >
        <div
          class="bg-dial-slate-100 lg:h-full"
        >
          <div
            class="flex flex-col gap-y-3 px-4 lg:px-6 lg:py-3"
          >
            <div
              class="flex flex-col gap-y-4 py-3"
            >
              <div
                class="text-xl text-dial-meadow font-semibold"
              >
                @firma - Edited
              </div>
              <div
                class="flex justify-center items-center py-16 bg-white rounded border"
              >
                <div
                  class="inline"
                >
                  <img
                    alt="Logo of Product."
                    class="object-contain"
                    src="http://localhost:3000//assets/products/firma.png"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-8 text-sm pt-6 pb-3"
              >
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-meadow"
                  >
                    Website
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    <a
                      class="flex border-b border-dial-iris-blue "
                      href="//administracionelectronica.gob.es/ctt/clienteafirma"
                      rel="noreferrer"
                      target="_blank"
                    >
                      <div
                        class="line-clamp-1 break-all"
                      >
                        administracionelectronica.gob.es/ctt/clienteafirma
                      </div>
                    </a>
                     ⧉
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="font-semibold text-dial-meadow"
                  >
                    License
                  </div>
                  <div
                    class="flex text-dial-stratos"
                  >
                    NONE
                  </div>
                </div>
                <div
                  class="flex flex-col gap-y-3"
                >
                  <div
                    class="flex flex-row gap-3"
                  >
                    <div
                      class="font-semibold text-dial-meadow"
                    >
                      Sectors
                    </div>
                    <div
                      class="flex gap-3 ml-auto"
                    />
                  </div>
                  <div
                    class="flex flex-col gap-y-2"
                  >
                    <div>
                      <div>
                        State and Democracy (Good Governance)
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              class="border-b border-dial-slate-200"
            />
          </div>
        </div>
      </div>
      <div
        class="lg:basis-2/3"
      >
        <form>
          <div
            class="px-4 lg:px-0 py-4 lg:py-6 text-dial-meadow"
          >
            <div
              class="flex flex-col gap-y-6 text-sm"
            >
              <div
                class="text-xl font-semibold"
              >
                Edit @firma - Edited
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                  for="name"
                >
                  Name
                </label>
                <input
                  class="w-full text-sm"
                  id="name"
                  name="name"
                  placeholder="Name"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label>
                  Aliases
                </label>
                <div
                  class="flex gap-x-2"
                >
                  <input
                    class="w-full text-sm"
                    name="aliases.0.value"
                    placeholder="Alias"
                    type="text"
                    value=""
                  />
                  <button
                    class="bg-dial-meadow shadow-md px-3 py-2.5 hover:bg-dial-angel"
                    type="button"
                  >
                    <svg
                      class="text-sm"
                      fill="currentColor"
                      height="1em"
                      stroke="currentColor"
                      stroke-width="0"
                      viewBox="0 0 448 512"
                      width="1em"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M256 80c0-17.7-14.3-32-32-32s-32 14.3-32 32V224H48c-17.7 0-32 14.3-32 32s14.3 32 32 32H192V432c0 17.7 14.3 32 32 32s32-14.3 32-32V288H400c17.7 0 32-14.3 32-32s-14.3-32-32-32H256V80z"
                      />
                    </svg>
                  </button>
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="website"
                >
                  Website
                </label>
                <div
                  class="border border-transparent url-input bg-white flex items-center"
                >
                  <span
                    class="select-none text-dial-gray"
                  >
                    https://
                  </span>
                  <input
                    class="url w-full text-sm placeholder-dial-gray border-0 py-0 px-0 focus:outline-0"
                    id="website"
                    placeholder="Website"
                    value="administracionelectronica.gob.es/ctt/clienteafirma"
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label>
                  Logo
                </label>
                <label
                  class="flex items-center"
                >
                  <input
                    accept=".jpg,.jpeg,.png,.bmp"
                    class="bg-white file:hidden w-full text-sm"
                    name="imageFile"
                    type="file"
                  />
                  <div
                    class="-ml-11 flex p-1"
                  >
                    <span
                      class="h-full pl-1 border-l text-dial-gray-dark border-dial-gray-dark"
                    >
                      <svg
                        fill="currentColor"
                        height="1em"
                        stroke="currentColor"
                        stroke-width="0"
                        version="1.1"
                        viewBox="0 0 16 16"
                        width="1em"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M13 14h-10v-2l3-5 4.109 5 2.891-2v4z"
                        />
                        <path
                          d="M13 7.5c0 0.828-0.672 1.5-1.5 1.5s-1.5-0.672-1.5-1.5 0.672-1.5 1.5-1.5c0.828 0 1.5 0.672 1.5 1.5z"
                        />
                        <path
                          d="M14.341 3.579c-0.347-0.473-0.831-1.027-1.362-1.558s-1.085-1.015-1.558-1.362c-0.806-0.591-1.197-0.659-1.421-0.659h-7.75c-0.689 0-1.25 0.561-1.25 1.25v13.5c0 0.689 0.561 1.25 1.25 1.25h11.5c0.689 0 1.25-0.561 1.25-1.25v-9.75c0-0.224-0.068-0.615-0.659-1.421zM12.271 2.729c0.48 0.48 0.856 0.912 1.134 1.271h-2.406v-2.405c0.359 0.278 0.792 0.654 1.271 1.134zM14 14.75c0 0.136-0.114 0.25-0.25 0.25h-11.5c-0.135 0-0.25-0.114-0.25-0.25v-13.5c0-0.135 0.115-0.25 0.25-0.25 0 0 7.749-0 7.75 0v3.5c0 0.276 0.224 0.5 0.5 0.5h3.5v9.75z"
                        />
                      </svg>
                    </span>
                  </div>
                </label>
                <div
                  class="text-xs italic text-dial-stratos"
                >
                  Note: Supported file types are jpg, png, and bmp
                </div>
              </div>
              <label
                class="flex gap-x-2 items-center self-start"
              >
                <input
                  class="h-5 w-5"
                  name="govStackEntity"
                  type="checkbox"
                />
                GovStack product
              </label>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  class="required-field"
                >
                  Description
                </label>
                <div
                  class="editor-shell read-write"
                >
                  <div
                    class="flex flex-col"
                  >
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Undo"
                        class="toolbar-item spaced"
                        disabled=""
                        title="Undo (Ctrl+Z)"
                        type="button"
                      >
                        <i
                          class="format undo"
                        />
                      </button>
                      <button
                        aria-label="Redo"
                        class="toolbar-item"
                        disabled=""
                        title="Redo (Ctrl+Y)"
                        type="button"
                      >
                        <i
                          class="format redo"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text style"
                        class="toolbar-item block-controls"
                        type="button"
                      >
                        <span
                          class="icon block-type paragraph"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Normal
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for font family"
                        class="toolbar-item font-family"
                        type="button"
                      >
                        <span
                          class="icon block-type font-family"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Arial
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Decrease font size"
                        class="toolbar-item font-decrement"
                        title="Decrease font size (Ctrl+Shift+,)"
                        type="button"
                      >
                        <i
                          class="format minus-icon"
                        />
                      </button>
                      <input
                        class="toolbar-item font-size-input"
                        max="72"
                        min="8"
                        title="Font size"
                        type="number"
                        value="15"
                      />
                      <button
                        aria-label="Increase font size"
                        class="toolbar-item font-increment"
                        title="Increase font size (Ctrl+Shift+.)"
                        type="button"
                      >
                        <i
                          class="format add-icon"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Format text as bold. Shortcut: Ctrl+B"
                        class="toolbar-item spaced "
                        title="Bold (Ctrl+B)"
                        type="button"
                      >
                        <i
                          class="format bold"
                        />
                      </button>
                      <button
                        aria-label="Format text as italics. Shortcut: Ctrl+I"
                        class="toolbar-item spaced "
                        title="Italic (Ctrl+I)"
                        type="button"
                      >
                        <i
                          class="format italic"
                        />
                      </button>
                      <button
                        aria-label="Format text to underlined. Shortcut: Ctrl+U"
                        class="toolbar-item spaced "
                        title="Underline (Ctrl+U)"
                        type="button"
                      >
                        <i
                          class="format underline"
                        />
                      </button>
                      <button
                        aria-label="Insert code block"
                        class="toolbar-item spaced "
                        title="Insert code block (Ctrl+Shift+C)"
                        type="button"
                      >
                        <i
                          class="format code"
                        />
                      </button>
                      <button
                        aria-label="Insert link"
                        class="toolbar-item spaced "
                        title="Insert link (Ctrl+K)"
                        type="button"
                      >
                        <i
                          class="format link"
                        />
                      </button>
                    </div>
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Formatting text color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon font-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting background color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon bg-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting options for additional text styles"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon dropdown-more"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Insert specialized editor node"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon plus"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Insert
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text alignment"
                        class="toolbar-item spaced alignment"
                        type="button"
                      >
                        <span
                          class="icon left-align"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Left Align
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="editor-container "
                  >
                    <div
                      class="editor-scroller"
                    >
                      <div
                        class="editor"
                      >
                        <div
                          aria-placeholder="Description"
                          class="ContentEditable__root read-write"
                          contenteditable="true"
                          data-lexical-editor="true"
                          role="textbox"
                          spellcheck="true"
                          style="user-select: text; white-space: pre-wrap; word-break: break-word;"
                        >
                          <p
                            class="ExchangeLexicalTheme__paragraph ExchangeLexicalTheme__ltr"
                            dir="ltr"
                          >
                            <span
                              data-lexical-text="true"
                            >
                              Suite of solutions for digital identities and electronic signatures, aimed at public administrations for the implementation of authentication and electronic signatures in a streamlined and effective manner.
                            </span>
                          </p>
                        </div>
                        <div
                          draggable="true"
                        >
                          <div
                            class="icon draggable-block-menu"
                            style="opacity: 0; transform: translate(-10000px, -10000px);"
                          >
                            <div
                              class="icon"
                            />
                          </div>
                        </div>
                        <div
                          class="draggable-block-target-line"
                        />
                        <div
                          class="link-editor"
                          style="opacity: 1; transform: translate(-5px, 10px);"
                        />
                        <div
                          class="table-cell-action-button-container table-cell-action-button-container--inactive"
                        />
                      </div>
                    </div>
                    <div />
                    <div
                      class="actions"
                    >
                      <button
                        aria-label="Disable speech to text"
                        class="action-button action-button-mic"
                        title="Speech To Text"
                        type="button"
                      >
                        <i
                          class="mic"
                        />
                      </button>
                      <button
                        aria-label="Clear editor contents"
                        class="action-button clear"
                        title="Clear"
                        type="button"
                      >
                        <i
                          class="clear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <hr
                class="border-b border-dashed border-dial-slate-300"
              />
              <div
                class="text-2xl font-semibold pb-4"
              >
                Product Pricing Information
              </div>
              <label
                class="flex gap-x-2 mb-2 items-center self-start"
              >
                <input
                  class="h-5 w-5"
                  name="commercialProduct"
                  type="checkbox"
                />
                This product is commercial product.
              </label>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="pricingUrl"
                >
                  Link to Pricing Information
                </label>
                <div
                  class="border border-transparent url-input bg-white flex items-center"
                >
                  <input
                    class="url w-full text-sm placeholder-dial-gray border-0 py-0 px-0 focus:outline-0"
                    id="pricingUrl"
                    placeholder="Link to Pricing Information"
                    value=""
                  />
                </div>
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="hostingModel"
                >
                  Hosting Model
                </label>
                <input
                  class="w-full text-sm"
                  id="hostingModel"
                  name="hostingModel"
                  placeholder="Hosting Model"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label
                  for="pricingModel"
                >
                  Pricing Model
                </label>
                <input
                  class="w-full text-sm"
                  id="pricingModel"
                  name="pricingModel"
                  placeholder="Pricing Model"
                  type="text"
                  value=""
                />
              </div>
              <div
                class="flex flex-col gap-y-2"
              >
                <label>
                  Pricing Details
                </label>
                <div
                  class="editor-shell read-write"
                >
                  <div
                    class="flex flex-col"
                  >
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Undo"
                        class="toolbar-item spaced"
                        title="Undo (Ctrl+Z)"
                        type="button"
                      >
                        <i
                          class="format undo"
                        />
                      </button>
                      <button
                        aria-label="Redo"
                        class="toolbar-item"
                        disabled=""
                        title="Redo (Ctrl+Y)"
                        type="button"
                      >
                        <i
                          class="format redo"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text style"
                        class="toolbar-item block-controls"
                        type="button"
                      >
                        <span
                          class="icon block-type paragraph"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Normal
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for font family"
                        class="toolbar-item font-family"
                        type="button"
                      >
                        <span
                          class="icon block-type font-family"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Arial
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Decrease font size"
                        class="toolbar-item font-decrement"
                        title="Decrease font size (Ctrl+Shift+,)"
                        type="button"
                      >
                        <i
                          class="format minus-icon"
                        />
                      </button>
                      <input
                        class="toolbar-item font-size-input"
                        max="72"
                        min="8"
                        title="Font size"
                        type="number"
                        value="15"
                      />
                      <button
                        aria-label="Increase font size"
                        class="toolbar-item font-increment"
                        title="Increase font size (Ctrl+Shift+.)"
                        type="button"
                      >
                        <i
                          class="format add-icon"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Format text as bold. Shortcut: Ctrl+B"
                        class="toolbar-item spaced "
                        title="Bold (Ctrl+B)"
                        type="button"
                      >
                        <i
                          class="format bold"
                        />
                      </button>
                      <button
                        aria-label="Format text as italics. Shortcut: Ctrl+I"
                        class="toolbar-item spaced "
                        title="Italic (Ctrl+I)"
                        type="button"
                      >
                        <i
                          class="format italic"
                        />
                      </button>
                      <button
                        aria-label="Format text to underlined. Shortcut: Ctrl+U"
                        class="toolbar-item spaced "
                        title="Underline (Ctrl+U)"
                        type="button"
                      >
                        <i
                          class="format underline"
                        />
                      </button>
                      <button
                        aria-label="Insert code block"
                        class="toolbar-item spaced "
                        title="Insert code block (Ctrl+Shift+C)"
                        type="button"
                      >
                        <i
                          class="format code"
                        />
                      </button>
                      <button
                        aria-label="Insert link"
                        class="toolbar-item spaced "
                        title="Insert link (Ctrl+K)"
                        type="button"
                      >
                        <i
                          class="format link"
                        />
                      </button>
                    </div>
                    <div
                      class="toolbar"
                    >
                      <button
                        aria-label="Formatting text color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon font-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting background color"
                        class="toolbar-item color-picker"
                        type="button"
                      >
                        <span
                          class="icon bg-color"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <button
                        aria-label="Formatting options for additional text styles"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon dropdown-more"
                        />
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Insert specialized editor node"
                        class="toolbar-item spaced"
                        type="button"
                      >
                        <span
                          class="icon plus"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Insert
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                      <div
                        class="divider"
                      />
                      <button
                        aria-label="Formatting options for text alignment"
                        class="toolbar-item spaced alignment"
                        type="button"
                      >
                        <span
                          class="icon left-align"
                        />
                        <span
                          class="text dropdown-button-text"
                        >
                          Left Align
                        </span>
                        <i
                          class="chevron-down"
                        />
                      </button>
                    </div>
                  </div>
                  <div
                    class="editor-container "
                  >
                    <div
                      class="editor-scroller"
                    >
                      <div
                        class="editor"
                      >
                        <div
                          aria-placeholder="Pricing Details"
                          class="ContentEditable__root read-write"
                          contenteditable="true"
                          data-lexical-editor="true"
                          role="textbox"
                          spellcheck="true"
                          style="user-select: text; white-space: pre-wrap; word-break: break-word;"
                        >
                          <p
                            class="ExchangeLexicalTheme__paragraph"
                          >
                            <br />
                          </p>
                        </div>
                        <div
                          aria-hidden="true"
                        >
                          <div
                            class="ContentEditable__placeholder"
                          >
                            Pricing Details
                          </div>
                        </div>
                        <div
                          draggable="true"
                        >
                          <div
                            class="icon draggable-block-menu"
                            style="opacity: 0; transform: translate(-10000px, -10000px);"
                          >
                            <div
                              class="icon"
                            />
                          </div>
                        </div>
                        <div
                          class="draggable-block-target-line"
                        />
                        <div
                          class="link-editor"
                          style="opacity: 1; transform: translate(-5px, 10px);"
                        />
                        <div
                          class="table-cell-action-button-container table-cell-action-button-container--inactive"
                        />
                      </div>
                    </div>
                    <div />
                    <div
                      class="actions"
                    >
                      <button
                        aria-label="Disable speech to text"
                        class="action-button action-button-mic"
                        title="Speech To Text"
                        type="button"
                      >
                        <i
                          class="mic"
                        />
                      </button>
                      <button
                        aria-label="Clear editor contents"
                        class="action-button clear"
                        disabled=""
                        title="Clear"
                        type="button"
                      >
                        <i
                          class="clear"
                        />
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="flex flex-wrap text-base mt-6 gap-3"
              >
                <button
                  class="submit-button"
                  disabled=""
                  type="submit"
                >
                  Submit Product
                  <svg
                    class="spinner ml-3"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M304 48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zm0 416a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM48 304a48 48 0 1 0 0-96 48 48 0 1 0 0 96zm464-48a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM142.9 437A48 48 0 1 0 75 369.1 48 48 0 1 0 142.9 437zm0-294.2A48 48 0 1 0 75 75a48 48 0 1 0 67.9 67.9zM369.1 437A48 48 0 1 0 437 369.1 48 48 0 1 0 369.1 437z"
                    />
                  </svg>
                </button>
                <button
                  class="cancel-button"
                  disabled=""
                  type="button"
                >
                  Cancel
                </button>
              </div>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Unit tests for the product detail page. Should render unauthorized for non logged in user. 1`] = `
<div>
  <div
    class="Toastify"
  />
</div>
`;
